<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nameinput_Activity">

        <ImageView
        android:id="@+id/imageView4"
        android:layout_width="490dp"
        android:layout_height="924dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loaderbg"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationnameinput1"
        android:layout_width="347dp"
        android:layout_height="217dp"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/mushroomwalking" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationnameinput2"
        android:layout_width="256dp"
        android:layout_height="155dp"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/confetti" />

    <TextView
        android:id="@+id/nameinputw1"
        android:layout_width="395dp"
        android:layout_height="92dp"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/nameinputw1"
        android:textAlignment="center"
        android:textColor="#428142"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/nameinputw2"
        android:layout_width="395dp"
        android:layout_height="92dp"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/nameinputw2"
        android:textAlignment="center"
        android:textColor="#428142"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />


    <TextView
        android:id="@+id/nameinputw3"
        android:layout_width="389dp"
        android:layout_height="89dp"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/nameinputw3"
        android:textAlignment="center"
        android:textColor="#428142"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <ImageView
        android:id="@+id/onboard1_image"
        android:layout_width="89dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61"
        app:srcCompat="@drawable/bgremovedsinglemush" />

    <EditText
        android:id="@+id/entername"
        android:layout_width="258dp"
        android:layout_height="76dp"
        android:ems="10"
        android:inputType="text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <Button
        android:id="@+id/continuenameinput"
        android:layout_width="193dp"
        android:layout_height="62dp"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746" />

</androidx.constraintlayout.widget.ConstraintLayout>